# k4geo

./: .__afs0F2E  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CODEOWNERS  CTestConfig.cmake  DartConfiguration.tcl  README.md  Readme  build_env.sh  fcc_ee_samplingFraction_turbineECalEndcap_siminput.py  hist.txt  install.sh  overlap1.txt  run_sitracking.xml  test_result.txt  thislcgeo.sh
.github/: PULL_REQUEST_TEMPLATE
.gitlab-ci.d/: init_x86_64-centos7-gcc49-opt.sh  init_x86_64-slc6-gcc48-opt.sh  init_x86_64-slc6-gcc49-opt.sh  init_x86_64.sh
.travis-ci.d/: compile_and_test.sh
CI/: combine_material_histograms.sh  compare_histograms.sh  generate_material_comparisons.sh  generate_material_scans.sh
CLIC/: Readme
ILD/: Issues.txt  Readme
SiD/: README.md
cmake/: k4geoConfig.cmake  k4geoConfig.cmake.in  thislcgeo.sh.in
detector/: SiTrackerEndcap_o2_v02ext_geo.cpp
detector/DetCommon/: CMakeLists.txt
detector/DetCommon/include/DetCommon/: DetUtils.h  Geant4CaloHit.h  Geant4PreDigiTrackHit.h
detector/DetCommon/src/: DetUtils.cpp  Geant4CaloHit.cpp  Geant4PreDigiTrackHit.cpp  SimpleParallelogram_geo.cpp
detector/DetSegmentation/: CMakeLists.txt
detector/DetSegmentation/include/DetSegmentation/: FCCSWGridPhiTheta.h  FCCSWGridPhiThetaHandle.h  GridSimplifiedDriftChamber.h  GridSimplifiedDriftChamberHandle.h  GridTheta.h
detector/DetSensitive/: CMakeLists.txt
detector/DetSensitive/include/DetSensitive/: BirksLawCalorimeterSD.h  GflashCalorimeterSD.h  SimpleCalorimeterSD.h  SimpleTrackerSD.h
detector/DetSensitive/src/: BirksLawCalorimeterSD.cpp  SimpleCalorimeterSD.cpp  SimpleTrackerSD.cpp
detectorCommon/: CMakeLists.txt
detectorCommon/include/detectorCommon/: DetUtils_k4geo.h  WireTracker_info.h  xtalk_k4geo.h  xtalk_neighbors_moduleThetaMergedSegmentation.h
detectorCommon/src/: DetUtils_k4geo.cpp  xtalk_k4geo.cpp  xtalk_neighbors_moduleThetaMergedSegmentation.cpp
detectorSegmentations/: CMakeLists.txt
detectorSegmentations/include/DetSegmentation/: GridEta.h
detectorSegmentations/include/detectorSegmentations/: DRCrystalHit.h  DRparamBarrel_k4geo.h  DRparamBase_k4geo.h  DRparamEndcap_k4geo.h  FCCSWEndcapTurbineHandle_k4geo.h  FCCSWEndcapTurbine_k4geo.h  FCCSWGridModuleThetaMerged.h  FCCSWGridModuleThetaMergedHandle.h  FCCSWGridModuleThetaMergedHandle_k4geo.h  FCCSWGridModuleThetaMerged_k4geo.h  FCCSWGridPhiEta.h  FCCSWGridPhiEtaHandle.h  FCCSWGridPhiEtaHandle_k4geo.h  FCCSWGridPhiEta_k4geo.h  FCCSWGridPhiTheta.h  FCCSWGridPhiThetaHandle.h  FCCSWGridPhiThetaHandle_k4geo.h  FCCSWGridPhiTheta_k4geo.h  FCCSWHCalPhiRowHandle_k4geo.h  FCCSWHCalPhiRow_k4geo.h  FCCSWHCalPhiThetaHandle_k4geo.h  FCCSWHCalPhiTheta_k4geo.h  GridDRcaloHandle_k4geo.h  GridDRcalo_k4geo.h  GridEta.h  GridEtaHandle.h  GridEtaHandle_k4geo.h  GridEta_k4geo.h  GridRPhiEta.h  GridRPhiEtaHandle.h  GridRPhiEtaHandle_k4geo.h  GridRPhiEta_k4geo.h  GridSimplifiedDriftChamber.h  GridSimplifiedDriftChamberHandle.h  GridSimplifiedDriftChamberHandle_k4geo.h  GridSimplifiedDriftChamber_k4geo.h  GridTheta.h  GridThetaHandle.h  GridThetaHandle_k4geo.h  GridTheta_k4geo.h  (+9 more)
detectorSegmentations/src/: DRCrystalHit.cpp  DRparamBarrel_k4geo.cpp  DRparamBase_k4geo.cpp  DRparamEndcap_k4geo.cpp  FCCSWEndcapTurbine_k4geo.cpp  FCCSWGridModuleThetaMerged.cpp  FCCSWGridModuleThetaMergedHandle.cpp  FCCSWGridModuleThetaMergedHandle_k4geo.cpp  FCCSWGridModuleThetaMerged_k4geo.cpp  FCCSWGridPhiEta.cpp  FCCSWGridPhiEtaHandle.cpp  FCCSWGridPhiEtaHandle_k4geo.cpp  FCCSWGridPhiEta_k4geo.cpp  FCCSWGridPhiTheta.cpp  FCCSWGridPhiThetaHandle.cpp  FCCSWGridPhiThetaHandle_k4geo.cpp  FCCSWGridPhiTheta_k4geo.cpp  FCCSWHCalPhiRowHandle_k4geo.cpp  FCCSWHCalPhiRow_k4geo.cpp  FCCSWHCalPhiThetaHandle_k4geo.cpp  FCCSWHCalPhiTheta_k4geo.cpp  GridDRcaloHandle_k4geo.cpp  GridDRcalo_k4geo.cpp  GridEta.cpp  GridEtaHandle.cpp  GridEtaHandle_k4geo.cpp  GridEta_k4geo.cpp  GridRPhiEta.cpp  GridRPhiEtaHandle.cpp  GridRPhiEtaHandle_k4geo.cpp  GridRPhiEta_k4geo.cpp  GridSimplifiedDriftChamber.cpp  GridSimplifiedDriftChamberHandle.cpp  GridSimplifiedDriftChamberHandle_k4geo.cpp  GridSimplifiedDriftChamber_k4geo.cpp  GridTheta.cpp  GridThetaHandle.cpp  GridThetaHandle_k4geo.cpp  GridTheta_k4geo.cpp  SCEPCalSegmentation.cpp  (+7 more)
detectorSegmentations/src/plugins/: SegmentationFactories.cpp
detectorSegmentations/tests/options/: phiEtaSegmentation.py
doc/: ReleaseNotes.md  release.notes
envelope/: README.txt
example/: BCPhys.xml  BCSeq.xml  DD4hepSimulation.py  DDG4_sequences.xml  DRCfastSDsteer.py  RunProg.py  SteeringFile_IDEA_o1_v03.py  SteeringFile_IDEA_o2_v01.py  arcfullsim.py  ced2go-template.xml  ddsim.py  gear_CLIC_o2_v01_dd4hep.xml  gear_ILD_o1_v05_ORG.xml  gear_ILD_o1_v05_dd4hep.xml  gps.mac  guineapig_to_lcio.py  gun.mac  ild_dd4hep_stdreco.xml  lcio_particle_gun.py  mcparticles.slcio  physics.xml  run.mac  runSim.py  run_refit.xml  run_refit_aidaTT.xml  run_sid_reco.xml  run_sitracking.xml  scepcal_steering.py  sequences.xml  simple_lcio.slcio  steeringFile.py  vis.mac
lcgeoTests/: CMakeLists.txt  compareIdenticalFiles.sh
lcgeoTests/compact/: ARC_standalone_o1_v01.xml  DCH_materials.xml  DCH_standalone_o1_v01.xml  DCH_standalone_o1_v02.xml
lcgeoTests/src/: BeamCalZtest.cpp  TestSensThickness.cpp
sensitiveDetectors/: CMakeLists.txt
sensitiveDetectors/include/DetSensitive/: AggregateCalorimeterSD.h  FullParticleAbsorptionSD.h
sensitiveDetectors/include/sensitiveDetectors/: AggregateCalorimeterSD.h  BirksLawCalorimeterSD.h  FullParticleAbsorptionSD.h  GflashCalorimeterSD.h  SimpleCalorimeterSD.h  SimpleDriftChamber.h  SimpleTrackerSD.h
sensitiveDetectors/src/: AggregateCalorimeterSD.cpp  BirksLawCalorimeterSD.cpp  FullParticleAbsorptionSD.cpp  GflashCalorimeterSD.cpp  SDWrapper.cpp  SimpleCalorimeterSD.cpp  SimpleDriftChamber.cpp  SimpleTrackerSD.cpp
test/: CMakeLists.txt
test/compact/: ARC_standalone_o1_v01.xml  DCH_standalone_o1_v02.xml  IDEA_withDRC_o1_v03.xml
test/scripts/: filter_G4Tessellated_warnings.py
test/src/: BeamCalZtest.cpp  TestSensThickness.cpp
(+1984 files in other folders)
